<resources>
    <string name="app_name">MyRepro</string>
    <string name="btnLogin">Login</string>
    <string name="hintPw">Password</string>
    <string name="hintUsername">Username</string>
    <string name="judul1">Dashboard</string>
    <string name="judul2">MyRepro - Media Pembelajaran</string>
    <string name="mn1">Pendahuluan</string>
    <string name="mn2">Materi</string>
    <string name="mn3">Tentang</string>
    <string name="mn4">Evaluasi</string>
    <string name="getstart">Get Started ></string>
    <string name="descLogo">logo</string>
    <string name="descBackground">bg_logo</string>
    <string name="panahBack">Panah Kembali</string>
    <string name="titikMenu">Tombol Menu</string>
    <string name="tulisanTentang">Reproduksi merupakan suatu upaya makhluk hidup untuk mempertahankan jenisnya sehingga jenisnya tidak punah. Reproduksi adalah kemampuan organisme untuk menghasilkan organisme yang sifatnya sama persis dengan induknya ataupun  gabungan sifat dari kedua induknya. Sistem reproduksi adalah sistem yang berperan dalam menghasilkan gamet fungsional pada tubuh. Reproduksi menggambarkan pembuatan telur, sperma dan proses-proses yang menyertainya sampai pembuahan (<i>fertilisasi</i>). Sistem reproduksi terdiri dari organ seks primer atau gonad (<i>testis</i> pada pria dan ovarium pada wanita) yang mengekspresikan hormon dan menghasilkan gamet (sperma dan telur). Selain itu juga ada organ seks sekunder berupa kelenjar dan saluran-saluran.</string>
    <string name="descMenu1">Menu Kompetensi Inti</string>
    <string name="descMenu2">Menu Kompetensi Dasar</string>
    <string name="descMenu3">Menu Tujuan</string>
    <string name="descMenu4">Menu Referensi</string>
    <string name="judulKompetensiDasar">B. Kompetensi Dasar</string>
    <string name="judulKompetensiInti">A. Kompetensi Inti</string>
    <string name="judulTujuan">Setelah mengikuti kegiatan pembelajaran diharapkan siswa mampu :</string>
    <string name="title_activity_menuutama">Menuutama</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="judulOrgan">Organ Sistem Reproduksi</string>
    <string name="orKonten1A">Organ sistem reproduksi pada manusia terdiri dari organ reproduksi pria dan wanita. Organ reproduksi pria dan wanita sama-sama berfungsi untuk menghasilkan gamet(sel kelamin). Selain itu, organ reproduksi tersebut mendukung dalam proses fertilisasi.</string>
    <string name="orKonten1">A. ORGAN REPRODUKSI PRIA</string>
    <string name="orKonten2">Organ reproduksi pria terdiri atas organ reproduksi luar dan dalam.</string>
    <string name="orKonten3">Gambar Organ reproduksi pria</string>
    <string name="orKonten4">Organ dalam reproduksi pria</string>
    <string name="orKonten4A">Sumber gambar. <link>http://www.softilmu.com/2015/05/Alat-Organ-Reproduksi-Pria-dan-Fungsi-Adalah.html</link></string>
    <string name="orKonten4B">Sumber gambar. <link>https://brainly.co.id/tugas/12912931</link></string>
    <string name="orKonten4C">Sumber gambar. <link>https://portal-ilmu.com/sistem-reproduksi-manusia-alat-reproduksi-wanita/</link></string>
    <string name="orKonten5">1. <font color='#EE0000'>Testis</font>, merupakan organ lunak yang berbentuk oval dengan ukuran panjang 4-5 cm dan diameter 2,5 cm, testis terdiri dari :</string>
    <string name="orKonten6">a. <font color='#EE0000'>Tubulus semineferus</font>, saluran berkelok-kelok yang menghasilkan sel sperma.</string>
    <string name="orKonten7">b. <font color='#EE0000'>Sel sertoli</font>, menghasilkan hormon esterogen dan merangsang spermiasi.</string>
    <string name="orKonten8">c. <font color='#EE0000'>Sel leydig</font>, menghasilkan hormon testosteron.</string>
    <string name="orKonten9">2.	<font color='#EE0000'>Epididimis</font>, saluran berkelok-kelok tempat pematangan dan penyimpanan sementara sel sperma sebelum sperma dikeluarkan. Epididimis berfungsi untuk mengangkut dan menyimpan sperma yang diproduksi oleh <i>testis</i>.</string>
    <string name="orKonten10">3. <font color='#EE0000'>Vas deferens</font>, saluran lurus yang berujung pada kelenjar prostat, berfungsi menyalurkan sperma menuju kelenjar vesikula seminalis.</string>
    <string name="orKonten11">4. <font color='#EE0000'>Kelenjar vesikula seminalis</font> (kantung mani), berjumlah sepasang, menghasilkan nutrisi untuk sperma.</string>
    <string name="orKonten12">5. <font color='#EE0000'>Kelenjar prostat</font> merupakan kelenjar penghasil semen terbesar berupa cairan yang encer seperti susu dan bersifat seperti alkalis atau basa untuk menyeimbangkan keasaman vagina.</string>
    <string name="orKonten13">6. <font color='#EE0000'>Kelenjar cowper/borbouretral</font> menghasilkan cairan yang kental untuk membersihkan uretra dari residu urine. Setelah uretra bersih, barulah sperma (semen) dikeluarkan. Uretra merupakan saluran di dalam penis yang berfungsi sebagai saluran urine dan semen.</string>
    <string name="orKonten14">7. <font color='#EE0000'>Saluran ejakulasi</font> \nAdalah saluran pendek penggabung vas deferens dengan uretra.</string>
    <string name="orKonten15">8. <font color='#EE0000'>Uretra</font> adalah saluran pengeluaran sperma atau urin menuju penis.</string>
    <string name="orKonten17">Organ Luar Reproduksi Pria</string>
    <string name="orKonten18">9. <font color='#EE0000'>Skrotum</font>, Kantung pembungkus testis yang melindungi testis dan mengatur suhu testis. Testis membutuhkan suhu khusus untuk pembentukan sperma.</string>
    <string name="orKonten19">10. <font color='#EE0000'>Penis</font>, merupakan alat kopulasi. Kopulasi merupakan cara untuk memasukkan sperma kedalam saluran reproduksi wanita (vagina). Penis terdiri dari :</string>
    <string name="orKonten20">a. <font color='#EE0000'>Bulbus penis</font>, bagian akar penis.</string>
    <string name="orKonten21">b. <font color='#EE0000'>Korpus penis</font>, jaringan erektil berongga yang mengandung pembuluh darah dan saraf. Ketika ada rangsangan, darah masuk ke jaringan erektil dan penis akan mengalami ereksi.</string>
    <string name="orKonten22">c. <font color='#EE0000'>Glans penis</font>, bagian kepala penis.</string>
    <string name="orKonten23">d. <font color='#EE0000'>Preputium</font>, kulit pelindung kepala penis sewaktu sirkumsisi. Saraf pada preputium berfungsi memberi rangsangan seksual.</string>
    <string name="orKonten24">ORGAN REPRODUKSI WANITA</string>
    <string name="orKonten25">Organ reproduksi wanita berfungsi untuk menghasilkan sel kelamin betina, yaitu sel telur (ovum). Organ reproduksi wanita terbagi menjadi organ reproduksi dalam dan organ reproduksi luar.</string>
    <string name="orKonten26">Organ Dalam Reproduksi Wanita</string>
    <string name="orKonten27">1. <font color='#EE0000'>Ovarium</font> \nGonad wanita yang menghasilkan ovum dan hormon pada wanita. Dalam ovarium terdapat folikel (cangkang) yang melindungi ovum.</string>
    <string name="orKonten28">2. <font color='#EE0000'>Fimbrae</font> \nJumbai yang mengangkap ovum dari ovarium menuju pangkal oviduk yang disebut infundibulum.</string>
    <string name="orKonten29">3. <font color='#EE0000'>Oviduk (tuba fallopi)</font>  \nSaluran penghubung ovarium dan uterus. Dinding oviduk memiliki epitel bersilia untuk menggerakkan oosit menuju ke uterus (memerlukan waktu 4-5 hari).</string>
    <string name="orKonten30">4. <font color='#EE0000'>Uterus</font> (Rahim) \nTempat perkembangannya zigot menjadi bayi. Dinding uterus tersusun atas otot polos dan endrometrium.</string>
    <string name="orKonten31">5. <font color='#EE0000'>Serviks (Leher Rahim)</font> \nCorong pembatas uterus dan vagina.</string>
    <string name="orKonten32">6. <font color='#EE0000'>Endometrium</font> \nMerupakan lapisan terdalam pada uterus dan tempat menempelnya ovum yang telah dibuahi.</string>
    <string name="orKonten33">7. <font color='#EE0000'>Vagina</font> \nLubang kopulasi yang berhubungan dengan vulva. Pada vagina terdapat selaput yang menghasilkan lendir yang disebut kelenjar Bartholin. Jika ada rangsangan maka kelenjar ini akan mensekresikan lendir.</string>
    <string name="orKonten34">Organ Luar Reproduksi Wanita</string>
    <string name="orKonten36">1. <font color='#EE0000'>Labium mayora dan labium minora</font> \n\nAdalah lipatan besar yang dalamnya terdapat lipatan kecil, berfungsi untuk melindungi vagina.</string>
    <string name="orKonten37">2. <font color='#EE0000'>Klitoris</font> \nAdalah tonjolan kecil diatas labium yang mengandung jaringan erektil seperti penis.</string>
    <string name="orKonten38">3. <font color='#EE0000'>Hymen (selaput dara)</font> \nSelaput yang melindungi vagina dan mengandung banyak pembuluh darah.</string>
    <string name="orKonten39">4. <font color='#EE0000'>Uretra</font> \nTerletak didepan vagina, merupakan tempat keluarnya air kemih.</string>
    <string name="gameto1">Gametogenesis merupakan proses pembentukan gamet (sel kelamin). Gametogenesis dibagi menjadi dua, yaitu spermatogenesis dan oogenesis. Spermatogenesis adalah pembentukan spermatozoa (gamet jantan) oleh testis, sedangkan oogenesis adalah proses pembentukan ovum (gamet betina) oleh ovarium.</string>
    <string name="gameto2">A. SPERMATOGENESIS</string>
    <string name="gameto3">Spermatogenesis adalah pembentukan spermatozoa (gamet jantan) oleh testis.</string>
    <string name="gameto4">Sumber gambar. <link>https://materi78.files.wordpress.com/2013/06/repro_bio3_3.pdf</link></string>
    <string name="gameto4B">Sumber gambar. <link>https://materi78.files.wordpress.com/2013/06/repro_bio3_3.pdf</link></string>
    <string name="asi1">ASI dihasilkan oleh kelenjar susu pada payudara seorang wanita yang dihasilkan setelah kehamilan tua atau setelah melahirkan. ASI lebih banyak diproduksi setelah bayi lahir karena hormon prolaktin lebih aktif. Kelenjar susu dipengaruhi oleh hormon esterogen dan progesteron. Kolostrum, merupakan cairan kuning yang disintesis dan disimpan oleh kelenjar mamae mulai bulan keempat atau kelima kehamilan yang akan menjadi makanan pertama bayi. Kolostrum kaya akan kandungan antibody ibu, menjaga bayi dari infeksi. Kandungan proteinnya yang tinggi juga mencegah diare pada bayi.</string>
    <string name="asi2">Gambar Ibu Menyusui</string>
    <string name="asi2B">Sumber gambar. <link>http://news.unair.ac.id/2019/10/29</link></string>
    <string name="asi3">Manfaat ASI</string>
    <string name="asi4">ASI mengandung zat gizi yang diperlukan untuk pertumbuhan dan sangat sesuai dengan pencernaan bayi. Berikut ini adalah manfaat ASI :</string>
    <string name="asi5">1. ASI sebagai nutrisi</string>
    <string name="asi6">ASI merupakan makanan tunggal yang mampu memenuhi kebutuhan tumbuh bayi normal sampai usia 6 bulan.</string>
    <string name="asi7">2. ASI meningkatkan daya tahan tubuh.</string>
    <string name="asi8">Bayi dengan asi ekslusif akan lebih sehat dan jarang sakit karena ASI mengandung berbagai zat kekebalan.</string>
    <string name="asi9">3. Asi meningkatkan kecerdasan.</string>
    <string name="asi10">ASI mengandung nutrient khusus yaitu taurine, laktosa dan asam lemak ikatan panjang(DHA, AHA, omega-3, omega_6) yang diperlukan otak bayi agar tumbuh optimal.</string>
</resources>