<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MateriMenu.Organreproduksi"
    android:background="@drawable/bgapps2"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarku"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/warnaToolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Organ Reproduksi"
        app:titleMarginStart="10dp" />
    <ScrollView
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/judulOrgan"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten1A"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten1"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="5sp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten2"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten4"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="5sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:scaleType="fitStart"
                android:layout_marginStart="4sp"
                android:layout_marginEnd="4sp"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/orKonten3"
                android:src="@drawable/organ_reproduksi"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <TextView
                android:id="@+id/tvsumbergambar1"
                android:text="@string/orKonten4A"
                android:layout_marginTop="5sp"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten5"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten6"
                android:layout_marginTop="2sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten7"
                android:layout_marginTop="2sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten8"
                android:layout_marginTop="2sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten9"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten10"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten11"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten12"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten13"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten14"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten15"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/orKonten17"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten18"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten19"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten20"
                android:layout_marginTop="5sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten21"
                android:layout_marginTop="5sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/orKonten22"
                android:layout_marginTop="5sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten23"
                android:layout_marginTop="5sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/orKonten24"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10sp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten25"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten26"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:scaleType="fitStart"
                android:layout_marginStart="4sp"
                android:layout_marginEnd="4sp"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/orKonten3"
                android:src="@drawable/organ_reproduksi_wanita"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <TextView
                android:text="@string/orKonten4B"
                android:layout_marginTop="5sp"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten27"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten28"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten29"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten30"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten31"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/orKonten32"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten33"
                android:layout_marginTop="10sp"

                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten34"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:scaleType="fitCenter"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="4sp"
                android:contentDescription="@string/orKonten3"
                android:src="@drawable/organ_luar_reproduksi_wanita"
                android:layout_width="match_parent"
                android:layout_height="375dp"/>
            <TextView
                android:text="@string/orKonten4C"
                android:layout_marginTop="1sp"
                android:layout_gravity="center"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/orKonten36"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten37"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten38"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/orKonten39"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>