<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgapps2"
    tools:context=".MateriMenu.Airsusu">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarku"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/warnaToolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Air Susu Ibu (ASI)"
        app:titleMarginStart="10dp" />
    <ScrollView
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/asi1"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:scaleType="fitStart"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="4sp"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/asi2"
                android:src="@drawable/asi1"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
            <TextView
                android:text="@string/asi2B"
                android:layout_marginTop="5sp"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/asi3"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/asi4"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/asi5"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/asi6"
                android:layout_marginTop="5sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/asi7"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/asi8"
                android:layout_marginTop="5sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/asi9"
                android:layout_marginTop="5sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/asi10"
                android:layout_marginTop="5sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="10sp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>